--- a/CaseInstaller/packages.config
+++ b/CaseInstaller/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1367" targetFramework="net472" />
+  <package id="Prism.Plugin.Logging.Abstractions" version="7.2.0.616" targetFramework="net472" />
   <package id="Prism.Unity" version="7.2.0.1367" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
